2003-05-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.mdoc: document timeouts. bump date.
	* dccserver.man: regen.

	* child.c (child_loop): readd CHAT support.

	* dccserver.c (main): kill children when quitting.
	(kill_children): new function.
	(collect_child): handle sigchild.

	* dccserver.c (main): use sigaction instead of signal, for better
	portability.

	* child.c: rewrite to not use stdio, to get sane timeout handling.

	* dccserver.h: new header file for common definitions.

	* dccserver.c, child.c: moved the child code to child.c.

2003-05-06  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (sig_handle): rename variable to avoid shadowing.
	(main): remove variable to avoid shadowing.

2003-05-02  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: 0.3a test release.

	* dccserver.c: warn if neither poll.h nor sys/poll.h are found.

	* configure.ac: one of poll.h and sys/poll.h is enough; break if
	poll.h is found.

	* Makefile.am (EXTRA_DIST): distribute README.Darwin.

	* README.Darwin: add instructions for Darwin.

	* configure.ac: check for poll.h and sys/poll.h.
	(USE_LIBPOLL): detect poll library (if any), and point to poll
	emulation lib if no poll() is found.

	* dccserver.c: conditionally include poll.h or sys/poll.h.

	* dccsend.c: include <sys/types.h>; noted missing by Jeremy Gore.

2003-04-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* strlcpy.c: sync license with original (less strict).
	* COPYING: sync license with strlcpy.c.

	* dccserver.c (get_file): add warning in an error case.

2003-04-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c (send_file): remove two unused variables.
	(parse_send_line): remove unused variable.
	(main): remove three unused variables.
	(global): remove unused variable.

	* dccserver.c (get_file): show time taken by transfer and transfer
	rate.
	(converse_with_client): remove unused variable.
	(handle_input): remove unused variable.