@@ -1,5 +1,7 @@
 2003-05-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
+	* child.c (child_loop): handle SIGINFO for CHAT.
+
 	* dccserver.mdoc: document timeouts. bump date.
 	* dccserver.man: regen.
 
